RESULTS/AutoSpec/raw_results/out-4o-frama-c/38_0001/38_merged.txt
/home/yangfp/AutoSpec/AutoSpec3/out/38_0001/38_merged.c:12:1: error: unterminated comment
   12 | /* @ requires INT_MIN < val <= INT_MAX;
      | ^
